
syntax = "proto3";

option java_multiple_files = true;
option java_package = "sash";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
    string dept=2;
    int32 age=3;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
    string newMessage = 2;
    int32 count = 3;
}
